changes:  - remove unemployed villagers without beds  - changed "dismantled" to "deconstructing" in deconstructing script  - Ah, frick. I forgot to put spaces between "You used", wood chopping energy cost, and "energy" in the last commit.  - added humorous disassembly reports.  - finished finding villagers system  - finished villager hiring system  - finished firing system  - added a fail safe for if the player ever gets stuck with more villagers than beds  - added villager lumberjack, miner, and shepherd job products to CalculateDayStart  - added an about box  - added an icon  - added a link to the github and fledgling wiki

--- a/Mncrft/Mncrft.vbproj
+++ b/Mncrft/Mncrft.vbproj
@@ -95,6 +95,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Mncrft.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -121,6 +124,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutBox1.Designer.vb">
+      <DependentUpon>AboutBox1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AboutBox1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MncrftGame.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +154,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AboutBox1.resx">
+      <DependentUpon>AboutBox1.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MncrftGame.resx">
       <DependentUpon>MncrftGame.vb</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +180,9 @@
     </None>
     <None Include="App.config" />
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Mncrft.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
