changes:  - a few misc. refinements  - renamed "Smelted Iron" and "Smelted Gold" to Iron Ingots and Gold Ingots  - fixed player spawning with a guard tower already built  - fixed the names of golden items

--- a/Mncrft/Mncrft.vbproj
+++ b/Mncrft/Mncrft.vbproj
@@ -38,7 +38,7 @@
     <OptionExplicit>On</OptionExplicit>
   </PropertyGroup>
   <PropertyGroup>
-    <OptionCompare>Binary</OptionCompare>
+    <OptionCompare>Text</OptionCompare>
   </PropertyGroup>
   <PropertyGroup>
     <OptionStrict>Off</OptionStrict>
